--- a/css/Swapnali.css
+++ b/css/Swapnali.css
@@ -100,22 +100,26 @@ body {
 
 textarea {
 	resize: none;
-	background: lightgray;
+	background: #f3f3f3;
 	border: none;
 	width: 100%;
+	color:black;
 }
 
 input {
-	background: lightgray;
+	background: #f3f3f3;
 	border: none;
 	width: 100%;
+	color:black;
+	height:30px;
 }
 
 button {
-	background: black;
-    color: white;
-    border: none;
-    width: 100%;
+	background: #000000;
+    color: #ffffff;
+	border: none;
+	height:30px;
+    width: 35%;
 }
 
 .portfolioDetailImageHolder {
@@ -128,10 +132,11 @@ button {
 
 .closeButton img {
 	float: right;
-    margin-right: 15px;
+    margin-right: 45px;
     height: 20px;
 	width: 20px;
 	cursor:pointer;
+	margin-top:30px;
 }
 
 .centerAlignImage {
@@ -143,4 +148,44 @@ button {
 .closeButton {
 	padding-right: 10px;
 	padding-top:5px;
+	height:100%;
+}
+
+::placeholder {
+	color: #cacaca;
+	padding-left:15px;
+}
+
+.connectContent {
+	text-align: center;
+}
+
+.connectFormText {
+	text-align:left;
+}
+
+.connectIconHolder img {
+	width:20px;
+}
+
+.portfolioDetailHeader {
+	height : 15%;
+}
+
+#portfolioDetailDisplayValue {
+	padding-top:30px;
+	font-size:21px;
+	padding-left:45px;
+}
+
+.connectFollow {
+	text-align: left;
+}
+
+.portfolioDetailText {
+	margin-top: 60px;
+    margin-bottom: 30px;
+    width: 100%;
+    text-align: center;
+    font-size: 15px;
 }
