--- a/css/Swapnali_Desktop.css
+++ b/css/Swapnali_Desktop.css
@@ -98,8 +98,11 @@
 	text-align: center;
 	margin-top: 15px;
 	font-size: 16px;
-	/* margin-right:15px;
-	margin-left:5px; */
+}
+
+.aboutMeImageHolder {
+	padding-right:0;
+	padding-left:0;
 }
 
 .aboutMeImageHolder img {
@@ -107,24 +110,28 @@
 }
 
 .connectImageHolder {
-	padding :0;
+	padding-right:0;
+	padding-left :0;
 }
 
 .connectImageHolder img {
 	width : 100%;
 }
 
-.connectContent {
-	text-align: center;
-}
-
-.connectIconHolder img {
-	width:20px;
+.connectText {
+	text-align:center;
+	margin-top:60px;
+	margin-bottom:60px;
 }
 
 .connectContentRow {
 	margin-top : 20px;
 	margin-bottom : 20px;
+}
+
+.formField {
+	margin-top : 8px;
+	margin-bottom : 8px;
 }
 
 .headerSocialMedia {
@@ -142,13 +149,3 @@
 	height:15px;
 	width:15px;
 }
-
-/* .aboutMeHolder {
-	display:table;
-	height:100%;
-}
-
-.aboutMeContainer {
-	display: table-cell;
-	vertical-align: middle;
-} */
