--- a/css/Swapnali_Mobile.css
+++ b/css/Swapnali_Mobile.css
@@ -1,7 +1,3 @@
-/* .flatMenu {
-	display : none !important;
-} */
-
 .header {
 	height : auto;
 }
@@ -29,26 +25,6 @@
     width: 30px;
 }
 
-/* #menuNavbar {
-	height : 100%;
-	position: absolute;
-	top:0;
-	margin:0;
-	padding:0;
-	background-color : #000000 !important;
-	opacity:0.8;
-	z-index:100;
-	transition:all 1s ease-in;
-	border:0px;
-	min-height:0px;
-} */
-
-/* .collapse {
-	display:block !important;
-	height:0;
-	overflow-y:hidden;
-} */
-
 .logoHolder {
     height: 10%;
 }
@@ -64,10 +40,9 @@
 	display : table;
 	text-align : center;
 	height:auto;
-	/*width:100%;*/
 }
 
- .menuOptionText {
+.menuOptionText {
 	display:table-cell;
 }
 
@@ -175,4 +150,23 @@
 
 button {
 	padding:10px;
+}
+
+.connectText {
+	text-align:center;
+	margin-top:20px;
+	margin-bottom:20px;
+	width:100%;
+}
+
+.connectFormText {
+	text-align:center;
+}
+
+.connectFollow {
+	text-align: center;
+}
+
+.portfolioDetailImageHolder img {
+	max-width : 100%;
 }
