Bug fixes and tablet support

--- a/css/Swapnali.css
+++ b/css/Swapnali.css
@@ -61,7 +61,7 @@ body {
 }
 
 .colLocation {
-	padding-left : 7%;;
+	padding-left : 7%;
 }
 
 .locationDetailRow {
@@ -166,7 +166,7 @@ button {
 }
 
 .connectIconHolder img {
-	width:20px;
+	width:16px;
 }
 
 .portfolioDetailHeader {
