--- a/css/Swapnali_Desktop.css
+++ b/css/Swapnali_Desktop.css
@@ -86,7 +86,6 @@
 	font-weight:normal;
 	position: relative;
 	top:45%;
-	height:100%;
 	width:100%;
 }
 
@@ -148,4 +147,9 @@
 	margin-left:5px;
 	height:15px;
 	width:15px;
+}
+
+.aboutMeHolder {
+	margin-top:40px;
+	margin-bottom:20px;
 }
