--- a/css/Swapnali.css
+++ b/css/Swapnali.css
@@ -137,6 +137,7 @@ button {
 	width: 20px;
 	cursor:pointer;
 	margin-top:30px;
+	pointer-events: all;
 }
 
 .centerAlignImage {
@@ -189,4 +190,8 @@ button {
     width: 100%;
     text-align: center;
     font-size: 15px;
+}
+
+img {
+	pointer-events: none;
 }
