--- a/css/Swapnali.css
+++ b/css/Swapnali.css
@@ -189,9 +189,17 @@ button {
     margin-bottom: 30px;
     width: 100%;
     text-align: center;
-    font-size: 15px;
+    font-size: 16px;
 }
 
 img {
 	pointer-events: none;
+}
+
+.headerSocialMedia img {
+	pointer-events: all;
+}
+
+.connectFollow img {
+	pointer-events: all;
 }
